<resources>
    <string name="app_name">NewsLine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_articles">Articles</string>
    <string name="news_txt">News</string>
    <string name="podcasts_txt">Podcasts</string>
    <string name="articles_txt">Articles</string>
    <string name="toBeImplemented_msg">To be implemented</string>
    <string name="noArticleFound_msg">No Articles Found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="duration_txt">Duration</string>
    <string name="today_txt">Today</string>
    <string name="sevenDays_txt">7 Days</string>
    <string name="thirtyDays_txt">30 Days</string>
    <string name="sections_txt">Sections</string>
    <string name="apply_txt">Apply</string>
    <string name="filter_txt">Filter</string>
</resources>